# OpenGL

./: CMakeLists.txt  ReadMe.md  main  main.cpp  notes.md
assets/shaders/: simple.frag  simple.vert
